--- a/app/src/main/res/layout/filter.xml
+++ b/app/src/main/res/layout/filter.xml
@@ -8,7 +8,6 @@
 
     <ScrollView
         android:id="@+id/filter_view"
-        app:layout_constraint="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -57,6 +56,7 @@
 
                 </TextView>
                 <SearchView
+                    android:id="@+id/keywords"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
@@ -81,6 +81,7 @@
 
                 </TextView>
                 <SearchView
+                    android:id="@+id/exclude"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
@@ -105,6 +106,7 @@
 
                 </TextView>
                 <SearchView
+                    android:id="@+id/allergies"
                     android:layout_width="270dp"
                     android:layout_height="45dp"
                     android:layout_marginTop="25dp"
@@ -143,7 +145,10 @@
                     android:id="@+id/price_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="25dp"></SeekBar>
+                    android:layout_marginTop="25dp"
+                    android:min="0"
+                    android:max="100"
+                    android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
@@ -177,7 +182,10 @@
                     android:id="@+id/cal_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="25dp"></SeekBar>
+                    android:layout_marginTop="25dp"
+                    android:min="0"
+                    android:max="1000"
+                    android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
@@ -211,7 +219,10 @@
                     android:id="@+id/time_seeker"
                     android:layout_width="250dp"
                     android:layout_height="45dp"
-                    android:layout_marginTop="25dp"></SeekBar>
+                    android:layout_marginTop="25dp"
+                    android:min="0"
+                    android:max="120"
+                    android:progress="0"></SeekBar>
             </LinearLayout>
 
             <LinearLayout
